# NBA2K22-Internal

./: CMakeLists.txt  readme.txt
src/: injector.cpp
src/NBA2K22/: DllMain.cpp  Memory.h  hook.h  sdk.h
